--- a/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "ChinhSuaPhuongTienGiaoHang";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_ctdgh = "active";
+    ViewBag.gh_phuongtienGH = "active";
     ViewBag.nd = "Chinh sửa phương tiện giao hàng";
 }
 
@@ -53,7 +53,7 @@
                             <input style="background-color:#27a300" type="submit" value="Lưu" class="btn btn-default" />
                         </div>
                         <div class="col-sm-2">
-                            <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachShipper"><i class=""></i> Quay lại</a>
+                            <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachPhuongTienGiaoHang"><i class=""></i> Quay lại</a>
                         </div>
                     </div>
                 </div>
