--- a/Test02/Views/GiaoHang/ChinhsuaShipper.cshtml
+++ b/Test02/Views/GiaoHang/ChinhsuaShipper.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "NhanVienGiaoHang";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_dsdh = "active";
+    ViewBag.gh_shippers = "active";
     ViewBag.nd = "Cập nhật thông tin nhân viên giao";
 }
 
