--- a/Test02/Views/GiaoHang/DonDangGiao.cshtml
+++ b/Test02/Views/GiaoHang/DonDangGiao.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "DonDangGiao";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_donhangmoi = "active";
+    ViewBag.gh_dongiaohang = "active";
     ViewBag.nd = " Danh sách đơn hàng đang giao";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
@@ -88,7 +88,7 @@
 
 
                                                 <td style="text-align:center">
-                                                    <a href="/GiaoHang/CapNhatTrangThaiDonHang/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                    <a href="/GiaoHang/CapNhatDonGiaoHang/@item.MaDH" class="btn btn-primary btn-sm edit">
                                                         <i class='bx bxs-log-in-circle'></i>
                                                     </a>
                                                 </td>
