--- a/Test02/Views/GiaoHang/XoaPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/XoaPhuongTienGiaoHang.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "XoaPhuongTienGiaoHang";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.xddGH = "active";
+    ViewBag.gh_phuongtienGH = "active";
     ViewBag.Name = "Xóa phương tiện giao hàng";
 }
 
@@ -37,7 +37,7 @@
                             <input style="background-color:#00b217" type="submit" value="Xóa" class="btn btn-default" />
                         </div>
                         <div class="col-sm-2">
-                            <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachShipper"><i class=""></i> Quay lại</a>
+                            <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachPhuongTienGiaoHang"><i class=""></i> Quay lại</a>
                         </div>
                     </div>
                 }
