--- a/Test02/Views/GiaoHang/XoaShipper.cshtml
+++ b/Test02/Views/GiaoHang/XoaShipper.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "XoaShipper";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_dsdh = "active";
+    ViewBag.gh_shippers = "active";
     ViewBag.nd = "Xóa nhân viên giao hàng";
 }
 
