--- a/Test02/Views/GiaoHang/DonDaGiao.cshtml
+++ b/Test02/Views/GiaoHang/DonDaGiao.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "DonDaGiao";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
-    ViewBag.gh_donhangmoi = "active";
+    ViewBag.gh_dongiaohang = "active";
     ViewBag.nd = " Danh sách đơn hàng đang giao";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
