--- a/Test02/Views/KhachHang/CongNo.cshtml
+++ b/Test02/Views/KhachHang/CongNo.cshtml
@@ -63,7 +63,7 @@
                     }
                     <tr>
                         <td colspan="6" style="text-align: right;">
-                            Tiền còn nợ: @{ var tong = string.Format("{0:0,0 VNĐ}", TempData["TongConNo"]);} @tong
+                            <b>Tiền còn nợ:</b> @{ var tong = string.Format("{0:0,0 VNĐ}", TempData["TongConNo"]);} @tong
                         </td>
                     </tr>
                 </table>
