--- a/Test02/Views/KeToan/CongnoDL.cshtml
+++ b/Test02/Views/KeToan/CongnoDL.cshtml
@@ -75,7 +75,7 @@
                             }
                             @foreach (var item in Model)
                             {
-                                if (item.TinhTrangThanhToan == "Chưa thanh toán" && item.TinhTrangGH=="Đã giao hàng")
+                                if (item.TinhTrangThanhToan == "Chưa thanh toán" && item.TinhTrangGH=="Đã giao")
                                 {
 
                                     <tr>
