Fix loi nho KinhDoanh

--- a/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
@@ -29,6 +29,7 @@
                 @Html.HiddenFor(mode => mode.PhieuXuatKho)
                 @Html.HiddenFor(mode => mode.XuatHoaDon)
                 @Html.HiddenFor(mode => mode.TinhTrangGH)
+                @Html.HiddenFor(mode => mode.TongTien)
                 <div class="form-group">
                     @Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-5">
