--- a/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "ChinhSuaChuyenGiao";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.dh = "active";
-    ViewBag.nd = "Chỉnh sửa chuyến giao";
+    ViewBag.nd = "Cập nhật chuyến giao";
 }
 
 
