--- a/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaPhuongTienGiaoHang.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "ChinhSuaPhuongTienGiaoHang";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_phuongtienGH = "active";
-    ViewBag.nd = "Chinh sửa phương tiện giao hàng";
+    ViewBag.nd = "Cập nhật phương tiện giao hàng";
 }
 
 
