--- a/Test02/Views/GiaoHang/DonGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/DonGiaoHang.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "DonGiaoHang";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_dongiaohang = "active";
-    ViewBag.nd = "Danh sách đơn giao hàng";
+    ViewBag.nd = "Đơn giao hàng";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
 }
 
-@*<link href="~/Content/css/material-dashboard.css" rel="stylesheet" />*@
 
     <div class="row">
         <div class="col-md-6 col-lg-4">
