--- a/Test02/Views/GiaoHang/DonHangHoan.cshtml
+++ b/Test02/Views/GiaoHang/DonHangHoan.cshtml
@@ -80,7 +80,7 @@
 
                                                 }
                                                 <td>
-                                                    <span class="badge bg-secondary" @*style="width:100px"*@>
+                                                    <span class="badge bg-secondary">
                                                         @Html.DisplayFor(modelItem => item.TinhTrangGH)
                                                     </span>
                                                 </td>
@@ -110,12 +110,8 @@
     function printDiv(divName) {
         var printContents = document.getElementById(divName).innerHTML;
         var originalContents = document.body.innerHTML;
-
         document.body.innerHTML = printContents;
-
         window.print();
-
         document.body.innerHTML = originalContents;
-
     }
 </script>
